Production/Production/src/objects/Communication_Code_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Communication_Code_Explanation__c</fullName>
        <label>Communication Code Explanation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Code__c</fullName>
        <label>Communication Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <label>Communication Code Mapping</label>
    <nameField>
        <displayFormat>CCM-{000000}</displayFormat>
        <label>Communication Code Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>